完成了不同等级不同颜色的信息输出

--- a/os/Makefile
+++ b/os/Makefile
@@ -7,3 +7,11 @@ run:
         -nographic \
         -bios ../bootloader/rustsbi-qemu.bin \
         -device loader,file=target/riscv64gc-unknown-none-elf/release/os,addr=0x80200000
+
+
+clean:
+
+git:
+	git checkout -b branch_name
+	geti printf
+	rp
