--- a/os/Makefile
+++ b/os/Makefile
@@ -1,17 +1,39 @@
-.PHONY: run
+.PHONY: run build clean
+# Building
+TARGET := riscv64gc-unknown-none-elf
+MODE := release
+KERNEL_ELF := target/$(TARGET)/$(MODE)/os
+KERNEL_BIN := $(KERNEL_ELF).bin
+DISASM_TMP := target/$(TARGET)/$(MODE)/asm
 
-run:
+# BOARD
+BOARD ?= qemu
+SBI ?= rustsbi
+BOOTLOADER := ../bootloader/$(SBI)-$(BOARD).bin
+K210_BOOTLOADER_SIZE := 131072
+
+# KERNEL ENTRY
+ifeq ($(BOARD), qemu)
+	KERNEL_ENTRY_PA := 0x80200000
+else ifeq ($(BOARD), k210)
+	KERNEL_ENTRY_PA := 0x80020000
+endif
+
+# Binutils
+OBJDUMP := rust-objdump --arch-name=riscv64
+OBJCOPY := rust-objcopy --binary-architecture=riscv64
+
+
+build:
 	cargo build --release
-	qemu-system-riscv64 \
-        -machine virt \
-        -nographic \
-        -bios ../bootloader/rustsbi-qemu.bin \
-        -device loader,file=target/riscv64gc-unknown-none-elf/release/os,addr=0x80200000
+	$(OBJCOPY) $(KERNEL_ELF) --strip-all -O binary $(KERNEL_BIN)
 
+run:build
+	qemu-system-riscv64 \
+			-machine virt \
+			-nographic \
+			-bios $(BOOTLOADER) \
+			-device loader,file=$(KERNEL_BIN),addr=$(KERNEL_ENTRY_PA)
 
 clean:
-
-git:
-	git checkout -b branch_name
-	geti printf
-	rp
+	@cargo clean
